--- a/Practica/public_html/index.html
+++ b/Practica/public_html/index.html
@@ -12,7 +12,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="newcss.css"/>
     </head>
     <body>
-        <div class="conteedor">
+        <div class="contenedor">
             <header class="header">
                 <h2>header</h2>
             </header>
