--- a/Practica/public_html/Enlace1.html
+++ b/Practica/public_html/Enlace1.html
@@ -14,6 +14,12 @@ and open the template in the editor.
         <div class="contenedor">
             <header class="header">
                 <h2>header</h2>
+                <div class="nav">
+                    <a href="Enlace1.html">Enlace1</a>
+                    <a href="Enlace2.html">Enlace2</a>
+                    <a href="Enlace3.html">Enlace3</a>
+                    <a href="Enlace4.html">Enlace4</a>
+                </div>
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
