--- a/Practica/public_html/Enlace3.html
+++ b/Practica/public_html/Enlace3.html
@@ -9,8 +9,26 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="newcss.css"/>
     </head>
     <body>
-       
+        <div class="contenedor2">
+            <header class="header">
+                <h2>header</h2>
+                <div class="nav">
+                       <a href="index.html">Principal</a>
+                       <a href="Enlace1.html">Enlace1</a>
+                       <a href="Enlace2.html">Enlace2</a>
+                       <a href="Enlace3.html">Enlace3</a>
+                       <a href="Enlace4.html">Enlace4</a>
+                   </div>
+            </header>
+            <main class="contenido2">
+                <h1>contenido</h1>
+            </main>
+            <footer class="footer">
+                <h3>Miguel Yebra</h3>
+            </footer>
+        </div>
     </body>
 </html>
