--- a/Practica/public_html/Enlace2.html
+++ b/Practica/public_html/Enlace2.html
@@ -25,6 +25,17 @@ and open the template in the editor.
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
+                <p>
+                            <img class="imagen1" src="149268.jpg"/>
+                            <img class="imagen2" src="2d-12.jpg"/>
+                            <img class="imagen3"  src="th.jpg"/>
+                            <img class="imagen4"  src="Albert_heijn.svg.png"/>
+                            <img class="imagen5"  src="Sun_Wiki.svg.png"/>
+                            <img class="imagen6"  src="Wifiservice.svg.png"/>
+                            <img class="imagen7"  src="Download-Computer-icon.ico"/>
+                            <img class="imagen8"  src="itune-store-icon-69061.ico"/>
+                            <img class="imagen9"  src="icono.ico"/>
+			</p>
             </main>
             <aside class="sidebar">
                 <h3>sidebar</h3>
