--- a/Practica/public_html/index.html
+++ b/Practica/public_html/index.html
@@ -24,6 +24,32 @@ and open the template in the editor.
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
+                <p>
+                            Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.
+                        </p>	
+                        <br><br>
+                        <h3>Listas dentro de otras</h3>
+                          <ul>
+                              <li>Un elemento dunha lista non ordenada.</li>
+                              <li>Outra lista ordenada.
+                                  <ol>
+                                      <li>Primeiro elemento dunha lista ordenada.</li>
+                                      <li>Segundo elemento dunha lista ordenada.</li>
+                                      <li>Terceiro elemento dunha lista ordenada.</li>
+                                  </ol>
+                              </li>
+                              <li>Outra lista de definición.
+                                  <dl>
+                                      <dt>Lista ul</dt>
+                                      <dd>Para marcar listas non ordenadas.</dd>
+                                      <dt>Lista ol</dt>
+                                      <dd>Para marcar listas ordenadas.</dd>
+                                  </dl>
+                              </li>
+                          </ul>
+                        <p>
+                            Nullam ut erat sit amet elit ultricies tempor vel eget magna. Vivamus vitae diam purus. Fusce semper nisl a nulla congue feugiat. Maecenas et tincidunt felis, dapibus rhoncus sapien. Maecenas tortor tortor, sagittis ac mattis sed, ullamcorper et orci. Pellentesque quis mollis massa. Donec lacinia turpis sapien, eu tincidunt dui rutrum elementum. Maecenas dictum et metus eget aliquam. Sed imperdiet lacinia vulputate. Vivamus mauris arcu, faucibus pulvinar laoreet sed, scelerisque et dui.
+                        </p>
             </main>
             <aside class="sidebar">
                 <h3>sidebar</h3>
