--- a/Practica/public_html/Enlace1.html
+++ b/Practica/public_html/Enlace1.html
@@ -25,6 +25,167 @@ and open the template in the editor.
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
+                  <table>
+            <caption>Tabla 1. Con css</caption>
+            <tr>
+                <th class="tris" rowspan="2">Sesión</th>
+                <th class="tris" rowspan="2">Hora</th>
+                <th class="tris" colspan="2">Ponencias</th>
+                <th class="tris" colspan="2">Prácticas</th>
+            </tr>
+            <tr>
+                <th class="sada">Aula 1</th>
+                <th class="sada">Aula 2</th>
+                <th class="sada">Aula 3</th>
+                <th class="sada">Aula 4</th>
+            </tr>
+            <tr>
+                <td class="res" rowspan="3">Sesión 1</td>
+                <td>9:00</td>
+                <td>Ponencia 1</td>
+                <td>Ponencia 2</td>
+                <td rowspan="3">Práctica 1</td>
+                <td rowspan="3">Práctica 2</td>
+            </tr>
+            <tr>
+                <td>10:00</td>
+                <td>Ponencia 3</td>
+                <td>Ponencia 4</td>
+            </tr>
+            <tr>
+                <td>11:00</td>
+                <td>Ponencia 5</td>
+                <td>Ponencia 6</td>
+            </tr>
+            <tr>
+                <td class="sada" colspan="6"> DESCANSO </td>
+            </tr>
+            <tr>
+                <td class="res" rowspan="3">Sesión 2</td>
+                <td>11:30</td>
+                <td>Ponencia 7</td>
+                <td>Ponencia 8</td>
+                <td rowspan="3">Práctica 3</td>
+                <td rowspan="3">Práctica 4</td>
+            </tr>
+            <tr>
+                <td>12:30</td>
+                <td>Ponencia 9</td>
+                <td>Ponencia 10</td>
+            </tr>
+            <tr>
+                <td>13:30</td>
+                <td>Ponencia 11</td>
+                <td>Ponencia 12</td>
+            </tr>
+            <tr>
+                <td class="sada" colspan="6"> DESCANSO </td>
+            </tr>
+             <tr>
+                <td class="res" rowspan="3">Sesión 3</td>
+                <td>16:00</td>
+                <td>Ponencia 13</td>
+                <td>Ponencia 14</td>
+                <td class="vaci" rowspan="3" colspan="2"> </td>
+              
+            </tr>
+            <tr>
+                <td>17:00</td>
+                <td>Ponencia 15</td>
+                <td>Ponencia 16</td>
+            </tr>
+            <tr>
+                <td>18:00</td>
+                <td>Ponencia 17</td>
+                <td>Ponencia 18</td>
+            </tr>
+        </table>
+                        <br><br>              
+      
+        <table border="1">
+            <caption>Horario DAW modular
+            </caption>
+            <tr> 
+                <th> </th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miercoles</th>
+                <th>jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <td>16:20 <br/> 17:10 </td>
+                <td>LMSXI</td>
+                <td>SIST </td>
+                <td>SIST </td>
+                <td>LMSXI </td>
+                <td>SIST </td>
+            </tr>
+            <tr>
+                <td>17:10 <br/> 18:00</td>
+
+                <td>LMSXI</td>
+
+
+                <td>SIST </td>
+
+                <td>SIST </td>
+
+                <td>LMSXI </td>
+                <td>SIST</td>
+            </tr>
+            <tr>
+                <td>18:00 <br/> 18:50</td>
+                <td>BD</td>
+                <td>PROG</td>
+                <td>SIST</td>
+                <td>PROG</td>
+                <td>PROG</td>
+
+            </tr>
+            <tr>
+                <td>18:50 <br/> 19:40 </td>
+                <td>BD </td>
+                <td>PROG</td>
+                <td>LMSXI</td>
+                <td>PROG</td>
+                <td>PROG</td>
+            </tr>
+            <tr>
+                <td>19:40 <br/> 20:30 </td>
+                <td> BD</td>
+                <td> PROG</td>
+                <td>BD</td>
+                <td>PROG</td>
+                <td>PROG</td>
+
+            </tr>
+            <tr>
+                <td>20:30 <br/> 21:20</td>
+                <td>CD</td>
+                <td>FOL </td>
+                <td>BD</td>
+                <td>FOL</td>
+                <td>BD</td>
+
+            </tr>
+            <tr>
+                <td>21:20 <br/> 22:10</td>
+                <td>CD </td>
+                <td>FOL </td>
+                <td>CD  </td>
+                <td>FOL</td>
+                <td>CD</td>
+            </tr>
+            <tr>
+                <td>22:10 <br/> 23:00</td>
+                <td></td>
+                <td></td>
+                <td>CD</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>   
             </main>
             <aside class="sidebar">
                 <h3>sidebar</h3>
