--- a/Practica/public_html/Enlace1.html
+++ b/Practica/public_html/Enlace1.html
@@ -25,7 +25,7 @@ and open the template in the editor.
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
-                  <table>
+                  <table align="center">
             <caption>Tabla 1. Con css</caption>
             <tr>
                 <th class="tris" rowspan="2">Sesión</th>
@@ -102,7 +102,7 @@ and open the template in the editor.
         </table>
                         <br><br>              
       
-        <table border="1">
+        <table align="center" border="1">
             <caption>Horario DAW modular
             </caption>
             <tr> 
