--- a/Practica/public_html/index.html
+++ b/Practica/public_html/index.html
@@ -52,7 +52,7 @@ and open the template in the editor.
                         </p>
             </main>
             <aside class="sidebar">
-                <h3>sidebar</h3>
+                <h3>Animación</h3>
             </aside>
             <footer class="footer">
                 <h3>Miguel Yebra</h3>
