--- a/Practica/public_html/Enlace1.html
+++ b/Practica/public_html/Enlace1.html
@@ -17,10 +17,10 @@ and open the template in the editor.
                 <h2>header</h2>
                  <div class="nav">
                      <a href="index.html">Principal</a>
-                    <a href="Enlace1.html">Enlace1</a>
-                    <a href="Enlace2.html">Enlace2</a>
-                    <a href="Enlace3.html">Enlace3</a>
-                    <a href="Enlace4.html">Enlace4</a>
+                    <a href="Enlace1.html">Tablas</a>
+                    <a href="Enlace2.html">Galería</a>
+                    <a href="Enlace3.html">Video y Audio</a>
+                    <a href="Enlace4.html">Formulario</a>
                 </div>
             </header>
             <main class="contenido">
