--- a/Practica/public_html/Enlace3.html
+++ b/Practica/public_html/Enlace3.html
@@ -26,7 +26,7 @@ and open the template in the editor.
             <main class="contenido2">
                 <h1>Audio y Video</h1>
                 <p>
-                    <audio src="Don Omar - Danza Kuduro ft. Lucenzo.mp3" loop="loop" controls="controls" width="900">
+                    <audio src="Don Omar - Danza Kuduro ft. Lucenzo.mp3" loop="loop" controls="controls" >
                         
                     </audio>
                 </p>
