--- a/Practica/public_html/index.html
+++ b/Practica/public_html/index.html
@@ -24,10 +24,16 @@ and open the template in the editor.
             </header>
             <main class="contenido">
                 <h1>contenido</h1>
+               
+                Soy <SPAN title="Soy un tooltip">un tooltip</SPAN>.
                 <p>
-                            Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.
+                Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.
                         </p>	
                         <br><br>
+                        <h3>Citas</h3>
+                        <blockquote cite="https://es.lipsum.com/">Cita número 1</blockquote>
+                         <blockquote cite="https://www.w3schools.com/">Cita número 2</blockquote>
+                        
                         <h3>Listas dentro de otras</h3>
                           <ul>
                               <li>Un elemento dunha lista non ordenada.</li>
