--- a/Practica/public_html/Enlace4.html
+++ b/Practica/public_html/Enlace4.html
@@ -26,6 +26,7 @@ and open the template in the editor.
             <main class="contenido2">
                 <h1>contenido</h1>
                 	<h1>Formulario de datos de alta dun usuario</h1>
+                        <form>
             <fieldset>
                 <legend>Datos persoais</legend>
                 <p>
@@ -99,9 +100,10 @@ and open the template in the editor.
 
             </fieldset>
             <p>
-                <input type="reset" name="limpar" value="Borrar datos do formulario"/>
+                <input type="reset" name="borrar" value="Borrar datos del formulario"/>
                 <input type="submit" name="procurar" value="Crear conta"/>
             </p>
+                        </form>
         
             </main>
             <footer class="footer">
